save all changes

--- a/members.html
+++ b/members.html
@@ -79,7 +79,7 @@
                 <div class="member-card">
                     <img src="./assets/images/Emmanuella.jpg" alt="Member 3">
                     <h3>Benson Emmanuella</h3>
-                    <p><b>Role:</b> Content Creator</p>
+                    <p><b>Role:</b> Member</p>
                     <p><b>Hobbies:</b> Reading, Content creation and Eating</p>
                     <p><b>Reason for joining Ctrlschool:</b> To become more knowledgeable with things relating to tech.</p> 
                 </div>
@@ -87,7 +87,7 @@
                 <div class="member-card">
                     <img src="./assets/images/Jamiu.jpg" alt="Member 6">
                     <h3>Jamiu Abubakar Babatunde</h3>
-                    <p><b>Role:</b> Designer</p>
+                    <p><b>Role:</b> Member</p>
                     <p><b>Hobbies:</b> Playing games and watching films</p>
                     <p><b>Reason for joining Ctrlschool:</b> To explore the tech world and discover new opportunities.</p>
                 </div>
@@ -95,7 +95,7 @@
                 <div class="member-card">
                     <img src="./assets/images/habeebat.jpg" alt="Member 7">
                     <h3>Abdullahi Habeebat Iye</h3>
-                    <p><b>Role:</b> Group Leader</p>
+                    <p><b>Role:</b> Member</p>
                     <p><b>Hobbies:</b> Watching movies, sleeping and eating</p>
                     <p><b>Reason for joining Ctrlschool:</b> To begin tech.</p>
                 </div>
@@ -103,7 +103,7 @@
                 <div class="member-card">
                     <img src="./assets/images/sodiq.jpg" alt="Member 8">
                     <h3>Olanrewaju Sodiq Temidayo</h3>
-                    <p><b>Role:</b> Designer</p>
+                    <p><b>Role:</b> Member</p>
                     <p><b>Hobbies:</b> Gaming and listening to music</p>
                     <p><b>Reason for joining Ctrlschool:</b> To gain knowledge on coding, web develoment and other related courses attached to it.</p>
                 </div>
@@ -111,7 +111,7 @@
                 <div class="member-card">
                     <img src="" alt="Member 9">
                     <h3>Divine Diala</h3>
-                    <p><b>Role:</b> Designer</p>
+                    <p><b>Role:</b> Member</p>
                     <p><b>Hobbies:</b> Gaming, playing football and writing </p>
                     <p><b>Reason for joining Ctrlschool:</b> To learn how to build digital spaces where my writing and others' can live, inspire and reach the world.</p>
                 </div>
