save all changes

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
     </main>
     
 
-   
+    <footer class="footer">
+        <div class="copyright-container">
+            <div class="copyright-text-center">
+                <p>© <span>Copyright.</span> <strong class="sitename">Group 6</strong> <span>   All Rights Reserved<br></span></p>
+            </div>
+
+            <div class="footer-social-links">
+                <a href="https://x.com/CtrlSchool?s=20"><i class="footer-twitter-x"><img src="./assets/images/twitter.png" alt="" class="twitter-x-img-f"></i></a>
+                <a href="https://www.instagram.com/ctrlschool?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="footer-instagram"><img src="./assets/images/instagram.png" alt="" class="instagram-img-f"></i></a>
+            </div>
+
+            <div class="credits">
+                Designed by <b>Daniella, Thelma, Tomisin, Ola, Dan Samson, Fariha</b>. Distributed by CtrlSchool.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
