save all changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                 </a>
             </div>
 
+            <!-- Hamburger Icon -->
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
                 
             <nav class="navmenu">
                 <ul class="navlinks">
@@ -72,4 +78,7 @@
         </div>
     </footer>
 </body>
+
+<script src="./assets/index.js"></script>
+
 </html>
